---
source: src/parser/parser.rs
description: assignment expression with correct precedence
expression: actual.unwrap()
info: a = b = 10
---
location:
  line: 1
  column: 1
kind:
  assignment:
    lvalue:
      location:
        line: 1
        column: 1
      kind:
        variable: a
    rvalue:
      location:
        line: 1
        column: 5
      kind:
        assignment:
          lvalue:
            location:
              line: 1
              column: 5
            kind:
              variable: b
          rvalue:
            location:
              line: 1
              column: 9
            kind:
              int_constant:
                - "10"
                - decimal
          op: ~
    op: ~
